Add get thing owner API in REST
