# src/backend/docs/swagger.json
@@ -362,6 +362,77 @@
                 }
             }
         },
+        "/api/v1/student-things-acts/{mark-number}": {
+            "get": {
+                "security": [
+                    {
+                        "JWT-Token": []
+                    }
+                ],
+                "description": "View history of thing owners",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "students"
+                ],
+                "summary": "View history of thing owners",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Маркировочный номер",
+                        "name": "mark-number",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Параметр того, как выводить историю: текущего владельца(current) или общую историю (all)",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ThingOwnerHistoryResponseMessage"
+                        }
+                    },
+                    "400": {
+                        "description": "Параметр не должен быть пустой\" | \"Параметр должен быть числом!",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "403": {
+                        "description": "У вас нет достаточно прав!",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Вещь не найдена",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Проблемы на стороне сервера.",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    },
+                    "501": {
+                        "description": "Пока функционал на стадии реализации",
+                        "schema": {
+                            "$ref": "#/definitions/models.ShortResponseMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/students": {
             "get": {
                 "security": [
@@ -955,6 +1026,14 @@
                 "thing": {
                     "type": "object",
                     "$ref": "#/definitions/objects.Thing"
+                }
+            }
+        },
+        "models.ThingOwnerHistoryResponseMessage": {
+            "type": "object",
+            "properties": {
+                "owner-student-number": {
+                    "type": "string"
                 }
             }
         },
