# src/backend/utils/requestUtils.go
@@ -1,8 +1,10 @@
 package utils
 
 import (
+	"github.com/gorilla/mux"
 	"net/http"
 	"src/objects"
+	appErrors "src/utils/error"
 	"strconv"
 )
 
@@ -28,4 +30,14 @@ func GetPageAndSizeFromQuery(r *http.Request) (page int, size int) {
 	}
 
 	return page, size
+}
+
+func GetMarkNumberFromPath(r *http.Request) (markNumber int, err error) {
+	markNumberString, isFound := mux.Vars(r)["mark-number"]
+	if isFound {
+		markNumber, err = strconv.Atoi(markNumberString)
+	} else {
+		err = appErrors.ThingNotFoundErr
+	}
+	return markNumber, err
 }
